# rob311

./: .gitignore  README.md  dots.py  picoload  ps4controller.txt  setup.sh
ballbot-omni-app/: 02_sensor_read_demo.py  03_ball_kinematics_demo.py  04_stability_controller.py  06_rtplot_demo.py  07_filtering_demo.py  07_filtering_demo.txt  08_steering_controller.py  09_lights.py  FIR.py  bbot_app.py  loop.py  main.py  pico_test_comms_app.py
ballbot-omni-app/MBot/Messages/: message_defs.py
ballbot-omni-app/MBot/SerialProtocol/: protocol.py
mbot-omni-firmware/: CMakeLists.txt  README.md  setup.sh
mbot-omni-firmware/comms/: CMakeLists.txt
mbot-omni-firmware/comms/include/comms/: common.h  listener.h  messages.h  protocol.h  topic_data.h
mbot-omni-firmware/comms/src/: common.c  listener.c  messages.c  protocol.c  topic_data.c
mbot-omni-firmware/controls/: CMakeLists.txt
mbot-omni-firmware/controls/include/controls/: controller.h
mbot-omni-firmware/controls/src/: controller.c
mbot-omni-firmware/lib/pico-sdk/src/rp2_common/hardware_irq/include/hardware/: irq.h
mbot-omni-firmware/lib/pico-sdk/src/rp2_common/pico_stdio_usb/: stdio_usb.c  stdio_usb_descriptors.c
mbot-omni-firmware/lib/pico-sdk/src/rp2_common/pico_stdio_usb/include/: tusb_config.h
mbot-omni-firmware/lib/pico-sdk/src/rp2_common/pico_stdio_usb/include/pico/: stdio_usb.h
mbot-omni-firmware/mbot/: CMakeLists.txt
mbot-omni-firmware/mbot/include/mbot/defs/: mbot_params.h  mbot_pins.h
mbot-omni-firmware/mbot/include/mbot/utils/: utils.h
mbot-omni-firmware/mbot/src/imu/: imu.c
mbot-omni-firmware/mbot/src/utils/: utils.c
mbot-omni-firmware/rc/: CMakeLists.txt
mbot-omni-firmware/rc/include/rc/current/: current.h
mbot-omni-firmware/rc/include/rc/encoder/: encoder.h  quadrature_encoder.pio
mbot-omni-firmware/rc/include/rc/fram/: fram.h
mbot-omni-firmware/rc/include/rc/motor/: motor.h
mbot-omni-firmware/rc/include/rc/mpu/: mpu.h
mbot-omni-firmware/rc/src/current/: current.c
mbot-omni-firmware/rc/src/encoder/: encoder.c
mbot-omni-firmware/rc/src/fram/: fram.c
mbot-omni-firmware/rc/src/math/: filter.c
mbot-omni-firmware/rc/src/motor/: motor.c
mbot-omni-firmware/rc/src/mpu/: mpu.c
mbot-omni-firmware/src/: CMakeLists.txt  bballbot.c  mbot.c  test_dmp.c
mbot-omni-firmware/tests/: CMakeLists.txt  mbot_calibrate_classic.c  pico_comms_test.c  pico_current_control.c  pico_encoder_test.c  pico_fram_test.c  pico_imu_test.c  pico_motor_analyze.c  pico_motor_test.c  quadrature_encoder_test.c  test_serial.c
python-examples/: 00_loop_execution.py  01_torque_conversion.py
